--- a/src/main/webapp-src/app.module.json
+++ b/src/main/webapp-src/app.module.json
@@ -28,6 +28,17 @@
                 "angular": "1.4.4" ,
                 "jquery-ui": "1.10.3" 
             }
-        }
+        } ,
+        "user-example": {
+            "modules": ["core", "blocks", "smartadmin" , "user-example"],
+            "dependencies": {
+                "font-awesome": "4.3.0",
+                "jquery": "~2.1.0",
+                "jquery-ui": "1.10.3"  ,
+                "bootstrap": "~3.3.4",
+                "angular": "1.4.4" ,
+                "angular-ui-router": "0.2.17"
+            }
+        } 
     }
 }
